import - flashlog - fix tooltip visibility & improve texts

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -5,11 +5,12 @@
   color: $color-grey-dark !important;
   background-color: rgba(255, 160, 0, 0.87) !important;
   border-radius: 4px;
-  z-index: 6;
+  z-index: 6 !important;
   &::before {
     margin-left: -5px !important;
     border: 5px solid transparent !important;
     border-top-color: rgba(255, 160, 0, 0.87) !important;
+    z-index: 6 !important;
   }
 }
 
